Benchmark: service-worker import issue to be resolved

--- a/public/batcast.html
+++ b/public/batcast.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <title>Batcast Styles</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/batcast.css">
@@ -11,6 +12,9 @@
   <main id="ompop">
 
     <h1>Batcast Sample Styles</h1>
+  
+  </main>
+  <script src="batcast.js"></script>
 
 </body>
 </html>
