--- a/public/options.html
+++ b/public/options.html
@@ -148,6 +148,7 @@
 
         <h3>
           Batters data
+          <span id="battersToSaveFeedback" class="feedback-wrapper"></span>
           <span class="options" style="left: 200px; top: -1px;">
             <button id="battersToSaveSave">
               <span class="label">Save</span>
@@ -167,6 +168,7 @@
 
         <h3>
           Pitchers data
+          <span id="pitchersToSaveFeedback" class="feedback-wrapper"></span>
           <span class="options" style="left: 200px; top: -1px;">
             <button id="pitchersToSaveSave">
               <span class="label">Save</span>
@@ -186,6 +188,7 @@
 
         <h3>
           Limits data
+          <span id="limitsToSaveFeedback" class="feedback-wrapper"></span>
           <span class="options" style="left: 200px; top: -1px;">
             <button id="limitsToSaveSave">
               <span class="label">Save</span>
@@ -220,6 +223,7 @@
 
         <h3>
           Batters data
+          <span id="battersSavedFeedback" class="feedback-wrapper"></span>
           <span class="options" style="left: 200px; top: -1px;">
             <button id="battersSavedAbandon" class="tertiary">Clear</button>
           </span>
@@ -233,6 +237,7 @@
 
         <h3>
           Pitchers data
+          <span id="pitchersSavedFeedback" class="feedback-wrapper"></span>
           <span class="options" style="left: 200px; top: -1px;">
             <button id="pitchersSavedAbandon" class="tertiary">Clear</button>
           </span>
@@ -246,6 +251,7 @@
 
         <h3>
           Limits data
+          <span id="limitsSavedFeedback" class="feedback-wrapper"></span>
           <span class="options" style="left: 200px; top: -1px;">
             <button id="limitsSavedAbandon" class="tertiary">Clear</button>
           </span>
